//
//  AccessibilityIdentifier.swift
//  hangman
//
//  Created by Jakub Towarek on 23/01/2020.
//  Copyright © 2020 Jakub Towarek. All rights reserved.
//

import Foundation



struct AccessibilityIdentifiers {

    // MARK: - Start Screen -

    static var startScreenTitleLabel: String { "startScreenTitleLabel" }

    static var startScreenRandomWordLabel: String { "startScreenRandomWordLabel" }

    static var startScreenRandomWordSwitch: String { "startScreenRandomWordSwitch" }

    static var startScreenAdditionalContentStackView: String { "startScreenAdditionalContentStackView" }

    static var startScreenCustomWordTextField: String { "startScreenCustomWordTextField" }

    static var startScreenStartButton: String { "startScreenStartButton" }

    // MARK: - Game Screen -

    static var gameScreenBar: String { " gameScreenBar" }

    static var gameScreenHiddenWordLabel: String { "gameScreenHiddenWordLabel" }

    static var gameScreenFolkHeadImageView: String { "gameScreenFolkHeadImageView" }

    static var gameScreenFolkNeckImageView: String { "gameScreenFolkNeckImageView" }

    static var gameScreenFolkCorpusImageView: String { "gameScreenFolkCorpusImageView" }

    static var gameScreenFolkLeftArmImageView: String { "gameScreenFolkLeftArmImageView" }

    static var gameScreenFolkRightArmImageView: String { "gameScreenFolkRightArmImageView" }

    static var gameScreenFolkLeftHandImageView: String { "gameScreenFolkLeftHandImageView" }

    static var gameScreenFolkRightHandImageView: String { "gameScreenFolkRightHandImageView" }

    static var gameScreenFolkLeftLegImageView: String { "gameScreenFolkLeftLegImageView" }

    static var gameScreenFolkRightLegImageView: String { "gameScreenFolkRightLegImageView" }

    static var gameScreenFolkLeftFootImageView: String { "gameScreenFolkLeftFootImageView" }

    static var gameScreenFolkRightFootImageView: String { "gameScreenFolkRightFootImageView" }

    static var gameScreenKeyboard: String { "gameScreenKeyboard" }

    // MARK: - Summary Screen -

    static var summaryScreenResultLabel: String { "summaryScreenResultLabel" }

    static var summaryScreenDescriptionLabel: String { "summaryScreenDescriptionLabel" }

    static var summaryScreenPlayAgainButton: String { "summaryScreenPlayAgainButton" }

    static var summaryScreenConfettiView: String { "summaryScreenConfettiView" }

    // MARK: - Message Box -

    static var messageBoxWarning: String { "messageBoxWarning" }

    static var messageBoxError: String { "messageBoxError" }
}
